Bug 106630 - radv: LLVM ERROR: Pointer address space out of range (bisected)
Summary: radv: LLVM ERROR: Pointer address space out of range (bisected)
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/radeon (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-23 13:13 UTC by Philip Rebohle
Modified: 2018-08-20 13:23 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Compute shader (26.73 KB, application/octet-stream)
2018-05-23 13:13 UTC, Philip Rebohle
Details
Compute shader with compacted bindings (26.73 KB, application/octet-stream)
2018-05-23 13:45 UTC, Philip Rebohle
Details

Description Philip Rebohle 2018-05-23 13:13:59 UTC
Created attachment 139708 [details]
Compute shader

Hello,

Metal Gear Solid V: The Phantom Pain crashes with the LLVM error mentioned in the title while trying to compile the attached compute shader. This regression was introduced with the addition of 32-bit pointer support:

  [36a4d6d08164344cbb4766944b3c45b2b223cf22] radv: add support for 32-bit pointers in user data SGPRs

Tested on Polaris 10 with llvm-svn r333079.

- Philip
Comment 1 Philip Rebohle 2018-05-23 13:45:13 UTC
Created attachment 139709 [details]
Compute shader with compacted bindings

As requested, here's the compute shader with the correct binding numbers.
Comment 2 Samuel Pitoiset 2018-05-23 14:54:53 UTC
https://reviews.llvm.org/D47261
Comment 3 Samuel Pitoiset 2018-08-20 13:23:33 UTC
Fixed with https://llvm.org/viewvc/llvm-project?view=revision&revision=340171

I will request a backport for LLVM 7.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.